--- a/index.html
+++ b/index.html
@@ -4,12 +4,91 @@
     <title>Alura Plus</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <section class="container principal">
-      <h1>Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-      <img src="img/combo.png" alt="O Combo+ é a junção do Alura+ com o Alura Língua" />
+      <div class="container__caixa">
+        <h1 class="container__titulo">Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="img/combo.png" alt="O Combo+ é a junção do Alura+ com o Alura Língua" class="container__imagem" />
+        <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 129,90</a>
+        <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+        <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
+      </div>
     </section>
+
+    <section class="container secundario">
+      <img src="img/plataformas.png" alt="Um monitor e um celular com o Alura+" class="secundario__imagem" />
+      <div class="container__descricao">
+        <h2 class="descricao__titulo">Assista do seu jeito</h2>
+        <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+      </div>
+    </section>
+
+    <section class="container secundario">
+      <div class="container__descricao">
+        <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+        <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+      </div>
+      <img src="img/telas.png" alt="Tela do Alura+ e do Alura línguas." class="secundario__imagem" />
+    </section>
+
+    <section class="container secundario">
+      <img src="img/notebook.png" alt="Notebook na tela do Alura+" class="secundario__imagem" />
+      <div class="container__descricao">
+        <h2 class="descricao__titulo">Baixe seus cursos</h2>
+        <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+      </div>
+    </section>
+
+    <section class="dispositivos">
+      <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+      <ul class="dispositivos__lista">
+        <li>
+          <img src="img/tv.png" alt="Ícone televisão" />
+          <h3 class="lista__item">TV</h3>
+        </li>
+        <li>
+          <img src="img/computador.png" alt="Ícone computador" />
+          <h3 class="lista__item">Computador</h3>
+        </li>
+        <li>
+          <img src="img/celular.png" alt="Ícone celular" />
+          <h3 class="lista__item">Celular</h3>
+        </li>
+      </ul>
+    </section>
+
+    <footer class="rodape">
+      <img src="img/logo.png" alt="Alura+" class="rodape__logo" />
+      <ul class="rodape__lista">
+        <li class="lista__link">
+          <a href="#">Idioma</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Dispositivos compatíveis</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Contrato de assinatura</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Política de privacidade</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Proteção de dados no Brasil</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Anúncios personalizados</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Ajuda</a>
+        </li>
+      </ul>
+      <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+      <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
   </body>
 </html>
